Create Shooting Level
-Create level
-Add Camera, light, etc

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-EditorStartupMap=/Game/Maps/01_CodeTest.01_CodeTest
+GameDefaultMap=/Game/Maps/ShootingLevel.ShootingLevel
+EditorStartupMap=/Game/Maps/ShootingLevel.ShootingLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
