--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/ShootingLevel.ShootingLevel
 EditorStartupMap=/Game/Maps/ShootingLevel.ShootingLevel
+GlobalDefaultGameMode=/Game/Blueprints/BP_GM.BP_GM_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
