--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 Content/SaveScores/HighScore.txt
+Shooter - Shortcut.lnk
